--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -1,52 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="620dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorAccent"
     android:orientation="vertical">
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/imgView"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="32dp"
-        android:src="@drawable/default_profie"
-        android:layout_centerHorizontal="true"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:id="@+id/registerUser"
-        android:tint="@android:color/white"
-        app:backgroundTint="@color/colorPrimary"
-        android:layout_below="@+id/imgView"
-        android:layout_toRightOf="@id/imgView"
-        android:src="@drawable/ic_add_black_36dp"
-        app:layout_anchorGravity="bottom|right|end"
-        android:onClick="loadImagefromGallery"
-        android:layout_marginLeft="-30dp"
-        android:layout_marginTop="-40dp"
-        android:layout_marginRight="40dp"/>
+
+
+        <ImageView
+            android:layout_marginTop="26dp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/imgView"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/default_profie"/>
+
+
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_below="@+id/imgView"
+            android:layout_toRightOf="@id/imgView"
+            android:id="@+id/registerUser"
+            android:tint="@android:color/white"
+            app:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_add_black_36dp"
+            app:layout_anchorGravity="bottom|right|end"
+            android:layout_marginLeft="-30dp"
+            android:layout_marginTop="-30dp"
+            android:onClick="loadImagefromGallery"/>
+
+
+
 
     <android.support.design.widget.TextInputLayout
         style="@style/elementOfLogin"
         android:layout_below="@+id/imgView"
         android:id="@+id/firstName"
+        android:nextFocusDown="@+id/registerLastName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <AutoCompleteTextView
+
             android:id="@+id/firstNameText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="#FFF"
             android:hint="@string/first_name"
             android:textColor="#FFF"
-            android:inputType="textEmailAddress"
+            android:inputType="text"
             android:maxLines="1"
             android:singleLine="true" />
 
@@ -57,14 +65,38 @@
         android:layout_below="@+id/firstName"
         android:id="@+id/registerLastName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:nextFocusDown="@+id/email">
 
         <AutoCompleteTextView
             android:id="@+id/lastNameText"
+
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="#FFF"
             android:hint="@string/last_name"
+            android:textColor="#FFF"
+            android:inputType="text"
+            android:maxLines="1"
+            android:singleLine="true" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        style="@style/elementOfLogin"
+        android:layout_below="@+id/registerLastName"
+        android:id="@+id/registerMail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:passwordToggleTint="#FFF">
+
+        <AutoCompleteTextView
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="#FFF"
+            android:hint="@string/email"
             android:textColor="#FFF"
             android:inputType="textEmailAddress"
             android:maxLines="1"
@@ -74,8 +106,8 @@
 
     <android.support.design.widget.TextInputLayout
         style="@style/elementOfLogin"
-        android:layout_below="@+id/registerLastName"
-        android:id="@+id/registerPassword"
+        android:layout_below="@+id/registerMail"
+        android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:passwordToggleTint="#FFF">
@@ -95,11 +127,15 @@
 
 
     <Button
+        android:layout_margin="16dp"
         android:layout_alignParentBottom="true"
-        android:layout_width="fill_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:background="@drawable/button_login_shape_register"
+        android:layout_marginBottom="20dp"
         android:onClick="uploadImage"
+        android:textColor="@android:color/white"
         android:text="Upload" />
 
 </RelativeLayout>
